# Image-Dataset-Augmentor

./: .gitignore  Augmentor Design Document.md  Augmentor.cpp  Augmentor.h  CMakeLists.txt  Doxyfile  LICENSE  Makefile  Operation.cpp  Operation.h  README.md  filters.h  gaussian_filter.h  jpeg.cpp  jpeg.h  main.cpp  test  unit_test.cpp
